Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-32364

Subdoc: Single-path mutation ignores expiry if docflags included in extras

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.4, 6.0.1
    • 5.0.0, 5.0.1, 5.1.0, 5.1.1, 5.1.2, 5.1.3, 5.5.0, 5.5.1, 5.5.2, 5.5.3, 6.0.0
    • couchbase-bucket
    • None
    • Triaged
    • Unknown

    Description

      According to a users analysis, the expiry is passed along by the Java SDK for `bucket.mutateIn("test").withExpiry(3600).upsertDocument(true).upsert("test", "test").execute();`, as observed from a wireshark trace, but the user says it's not set at the cluster.

      See details in the forum post.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              anitha.kuberan Anitha Kuberan
              ingenthr Matt Ingenthron
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty